<resources>
    <string name="app_name">Quản lí vật nuôi</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="UserSignUp">User Sign Up</string>
    <string name="remember"><![CDATA[I agree with the terms & Condition]]></string>
    <string name="procces"><![CDATA[PROCEED   -->]]></string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="heath">Sức khỏe</string>
    <string name="gioithieu">Giới thiệu</string>
    <string name="thoat">Thoát</string>
    <string name="luulai">Lưu lại</string>
    <string name="NamePet">Tên vật nuôi</string>
    <string name="chungloai">Chủng loại</string>
    <string name="soluong">Số lượng</string>
    <string name="gioitinh">Giới tính</string>
    <string name="tinhtrang">Tình trạng sức khỏe</string>
    <string name="them">Thêm</string>
    <string name="huy">Hủy</string>
    <string name="tiemphong">Tiêm phòng</string>
    <string name="loaithucan">Loại thức ăn</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="addpet">Thêm vật nuôi</string>
    <string name="IDpet">Tên vật nuôi</string>
    <string name="Namepet">Chủng loại</string>
    <string name="save">Lưu lại</string>
    <string name="Themvatnuoi">Thêm vật nuôi</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add">Thêm thành công</string>
    <string name="normal_toast_with_icon">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast">WARNING TOAST</string>
    <string name="info_toast">INFO TOAST</string>
    <string name="info_toast_with_formatting">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast">ERROR TOAST</string>
    <string name="success_toast">SUCCESS TOAST</string>
    <string name="custom_configuration">CUSTOM CONFIGURATION</string>

    <string name="error_message">This is an error toast.</string>
    <string name="success_message">Success!</string>
    <string name="info_message">Here is some info for you.</string>
    <string name="warning_message">Beware of the dog.</string>
    <string name="normal_message_without_icon">Normal toast w/o icon</string>
    <string name="normal_message_with_icon">Normal toast w/ icon</string>
    <string name="custom_message">sudo kill -9 everyone</string>
    <string name="hotro"><![CDATA[Hỗ trợ & phản hồi]]></string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
</resources>
