<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:id="@+id/ic_Dog"
        android:title="@string/dog"
        android:icon="@drawable/dog"/>

    <item android:id="@+id/ic_Cat"
        android:title="@string/cat"
        android:icon="@drawable/cat"/>


    <item android:id="@+id/ic_heath"
        android:title="@string/heath"
        android:icon="@drawable/ic_favorite"/>
    </group>
    <item android:title="Communicate">
        <menu>
    <item android:id="@+id/ic_gt"
        android:title="@string/gioithieu"
        android:icon="@android:drawable/ic_menu_myplaces"/>

    <item android:id="@+id/ic_thoat"
        android:title="@string/thoat"
        android:icon="@drawable/ic_turn_off"/>
        </menu>
    </item>

</menu>