<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.VaccinationActivity">

     <ImageView
         android:id="@+id/image"
        android:layout_width="match_parent"
         android:src="@drawable/health"
        android:layout_height="200dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/edNamePet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NamePet" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edTiemPhong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tiemphong"
            android:textSize="20sp" />
        <Switch
            android:id="@+id/btnswitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edLoaiThucAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loaithucan" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edSoLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/soluong" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/linkanh"
            android:layout_width="50dp"
            android:layout_weight="0.5"
            android:layout_height="50dp" />
        <Button
            android:textColor="@color/textcolor1"
            android:id="@+id/btnchosepicture"
            android:layout_width="150dp"
            android:textAllCaps="false"
            android:text="Choose picture"
            android:background="@drawable/backgroud_procces"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_procces"
            android:text="@string/them"
            android:onClick="addVaccin"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/backgroud_procces"
            android:text="@string/huy"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background" />
    </LinearLayout>

</LinearLayout>