<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDogActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_dog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/addpet"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtIDPet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IDpet"
                android:imeActionId="50"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtNamePet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Namepet"
                android:imeActionId="10"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtSoluong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/soluong"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtGioitinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gioitinh"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <EditText
                android:id="@+id/edtTinhtrang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tinhtrang"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnAdd"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroud_procces"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="#fff"
        android:textStyle="bold" />
</LinearLayout>