<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/signin"
            android:fontFamily="Roboto-LightItalic.ttf"
            android:shadowRadius="5"
            android:text="@string/SignIn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_signin"
            android:shadowRadius="5"
            android:text="@string/SignUp"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="134dp"
        android:layout_marginLeft="133dp"
        android:layout_marginRight="134dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="8dp"
        android:text="@string/UserSignUp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvsignup"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="20dp"
            android:hint="User Name"
            android:imeOptions="actionNext"
            android:text="admin"
            android:textSize="15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/edPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="20dp"
            android:hint="Pass Word"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="admin123"
            android:textSize="15dp" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chkRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/remember"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/chkRememberPass"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/login_dangnhap"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/backgroud_procces"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/procces"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>